# rosbco

./: .gitignore  .gitmodules  README.md  check_missing.py
src/robco_api/: CMakeLists.txt  package.xml
src/robco_api/include/robco_api/: client_messages.hpp  server_messages.hpp
src/robco_api/src/: robco_api.cpp
src/robco_bringup/: CMakeLists.txt  package.xml
src/robco_bringup/config/: api_config.yaml  collision_objects.yaml  joint_limits.yaml  rviz_config.rviz
src/robco_bringup/launch/: robco.launch.py  robco_gamepad_real.launch.py  robco_gamepad_sim.launch.py  robco_velocity_real.launch.py  robco_velocity_sim.launch.py
src/robco_description/: CMakeLists.txt  package.xml
src/robco_description/config/: initial_positions.yaml  rviz_config.rviz
src/robco_description/gazebo/: robco_gazebo.xacro
src/robco_description/launch/: gazebo.launch.py  gazebo_launch.py  ros2_controllers.launch.py  rsp.launch.py  rviz.launch.py
src/robco_description/meshes/0001_D86/: D86-legacy-distal_convdec.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0002_D116/: D116-legacy-distal.glb  D116-legacy-proximal.glb  D116-legacy_distal_convexDecompose.stl  D116-legacy_proximal.stl
src/robco_description/meshes/0003_D116/: D116-legacy-distal.glb  D116-legacy-proximal.glb
src/robco_description/meshes/0005_I86-150/: I86-150.glb  I86-150_convdec.stl
src/robco_description/meshes/0006_I86-200/: I86-200.glb  I86-200_convdec.stl
src/robco_description/meshes/0007_I86-300/: I86-300_convdec.stl
src/robco_description/meshes/0008_I86-400/: I86-400.glb  I86-400_convdec.stl
src/robco_description/meshes/0009_I86-500/: I86-500.glb  I86-500_convdec.stl
src/robco_description/meshes/0010_I86-600/: I86-600.glb  I86-600_convdec.stl
src/robco_description/meshes/0011_I86-700/: I86-700.glb  I86-700_convdec.stl
src/robco_description/meshes/0012_L86-150/: L86-150.glb  L86-150_convdec.stl
src/robco_description/ros2_control/: robco.ros2_control.xacro  ros2_controllers.yaml
src/robco_description/urdf/: handeye.xacro  inertials.xacro  rg2.xacro  robco.xacro  robco_description.xacro  robco_modules.xacro  robco_modules_base.xacro
src/robco_description/worlds/: my_world.sdf
src/robco_hw/: CMakeLists.txt  package.xml  robco_hw.xml
src/robco_hw/include/robco_hw/: robco_hw.hpp  visibility_control.h
src/robco_hw/src/: robco_hw.cpp
src/robco_moveit_config/: .setup_assistant  package.xml
src/robco_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robco.srdf  robco.urdf.xacro
src/robco_safety/: CMakeLists.txt  package.xml
src/robco_safety/config/: workspace_bounds.yaml
src/robco_safety/launch/: workspace_boundaries.launch.py
src/robco_safety/src/: workspace_boundaries.cpp
src/robco_validator/: CMakeLists.txt  package.xml
src/robco_validator/config/: collision_objects.yaml  kinematics.yaml  robco.srdf  servo_config_cartesian_real.yaml  servo_config_cartesian_sim.yaml  servo_config_joint_real.yaml  servo_config_joint_sim.yaml
src/robco_validator/include/robco_validator/: collision_object_publisher.hpp  joint_jog_republisher.hpp  joy_republisher.hpp  servo_status_republisher.hpp
src/robco_validator/launch/: joint_real.launch.py  joint_real_launch.py  joint_sim.launch.py  joint_sim_launch.py  joy_real.launch.py  joy_real_launch.py  joy_sim.launch.py  joy_sim_launch.py  servo_launch_params.py
src/robco_validator/src/: collision_object_publisher.cpp  validator.cpp
src/robcomm/: CMakeLists.txt  package.xml
src/robcomm/src/: robot.cpp
src/robot_description_test/: CMakeLists.txt  package.xml
src/robot_description_test/launch/: sim.launch.py
src/robot_description_test/urdf/: panda.ros2_control.xacro  panda.urdf.xacro  panda.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml
src/ros2_api/: CMakeLists.txt  package.xml
src/ros2_api/config/: api_config.yaml
src/ros2_api/config_parser/: CMakeLists.txt  package.xml
src/ros2_api/config_parser/include/ros2_api/config_parser/: config_parser.hpp
src/ros2_api/config_parser/src/: config_parser.cpp
src/ros2_api/converter/: CMakeLists.txt  package.xml
src/ros2_api/converter/include/ros2_api/converter/: json_serializer.hpp  json_serializer_msgs.hpp
src/ros2_api/converter/src/: json_serializer.cpp  json_serializer_msgs.cpp
src/ros2_api/core/: CMakeLists.txt  package.xml
src/ros2_api/core/config/: api_config.yaml
src/ros2_api/core/include/ros2_api/core/: feedback_sender.hpp  message_handler.hpp  state_sender.hpp
src/ros2_api/core/launch/: server_launch.py
src/ros2_api/core/src/: feedback_sender.cpp  message_handler.cpp  ros2_api_main.cpp  state_sender.cpp
src/ros2_api/include/ros2_api/: communication_manager.hpp  communication_protocol.hpp  config_manager.hpp  message_handler.hpp  message_sender.hpp  unix_domain_socket_protocol.hpp
src/ros2_api/launch/: server_launch.py
src/ros2_api/protocol_base/: CMakeLists.txt  package.xml
src/ros2_api/protocol_base/include/ros2_api/protocol_base/: communication_protocol.hpp
src/ros2_api/protocols/: CMakeLists.txt  package.xml  plugins.xml
src/ros2_api/protocols/include/ros2_api/protocols/: tcp_socket.hpp  unix_domain_socket.hpp
src/ros2_api/protocols/src/: tcp_socket.cpp  unix_domain_socket.cpp
src/ros2_api/publisher/: CMakeLists.txt  package.xml
src/ros2_api/publisher/include/ros2_api/publisher/: message_publisher.hpp  message_publisher_interface.hpp  publisher_factory.hpp
src/ros2_api/src/: communication_manager.cpp  communication_protocol.cpp  config_manager.cpp  message_handler.cpp  message_sender.cpp  ros2_api_node.cpp  unix_domain_socket_protocol.cpp
src/ros2_api/test/: test_config_manager.cpp
src/ros2_api/types/: CMakeLists.txt  package.xml
src/ros2_api/types/include/ros2_api/types/: types.hpp
src/ros2_api_msgs/: CMakeLists.txt  package.xml
src/ros2_api_msgs/msg/: CalculatedStates.msg  ClientFeedback.msg
src/test_nodes/: CMakeLists.txt  package.xml
src/test_nodes/launch/: multi_subscriber_launch.py
src/test_nodes/src/: multi_publisher.cpp  multi_subscriber.cpp
(+500 files in other folders)
