<?xml version="1.0"?>
<package format="3">
  <name>robco_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for RobCo.</description>
  
  <maintainer email="johannes.mesner@tum.de">Johannes Mesner</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
