<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description_test</name>
  <version>0.0.0</version>
  <description>
    The `robco_description` package contains the STL and Xacro files that define the physical structure, visual appearance, and collision properties of the RobCo robot. 
    The package also includes a Gazebo launch file (`gazebo_launch.py`) to facilitate easy setup of the robot in a simulated environment, making it ready for testing and development in Gazebo.
    This package serves as the foundational robot model for simulation and motion planning but does not handle hardware control directly.
  </description>
    <maintainer email="johannes.mesner@tum.de">Johannes Mesner</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
