<?xml version="1.0"?>
<package format="2">
  <name>multi_subscriber</name>
  <version>0.0.1</version>
  <description>Multi-subscriber and multi-publisher example for ROS2.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ros2_api_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
