<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>converter</name>
  <version>0.0.0</version>
  <description>Package with all stuff related to converting the messages.</description>
  <maintainer email="johannes.mesner@tum.de">Johannes Mesner</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_api_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>config_parser</depend>
  <depend>types_api</depend>
  <depend>sensor_msgs</depend>
  <depend>nlohmann-json-dev</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>